cambie el color de los titulos h6

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -82,14 +82,14 @@
                     <img src="../img/cocu_logo-450.png" alt="Logo panaderia cocu" width="90px">
                 </aside>
                 <aside class="col-md-4">
-                    <h6>Horarios de atención</h6>
+                    <h6 class='text-secondary'>Horarios de atención</h6>
                     <ul>
                         <li class="fw-light">Lunes a Viernes de 9hrs a 19hrs</li>
                         <li class="fw-light">Sabado de 9hrs a 12hrs</li>
                     </ul>
                 </aside>
                 <aside class="col-md-4">
-                    <h6>Seguinos en nuestras redes.</h6>
+                    <h6 class='text-secondary'>Seguinos en nuestras redes.</h6>
                     <div class="text-center text-md-start text-lg-start">
                         <a href="./error404.html" class="link-secondary"><i class="bi bi-facebook fs-4"></i></a>
                         <a href="./error404.html" class="link-secondary"><i
