--- a/pages/error404.html
+++ b/pages/error404.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3">
+    <nav class="navbar navbar-expand-lg bg-dark-subtle navbar-dark p-3">
       <div class="container">
         <a class="navbar-brand" href="index.html"> <img src="img/cocu_logo-450.png" alt="Logo panaderia cocu"
             width="90px"></a>
@@ -45,7 +45,7 @@
   <main>
 
   </main>
-  <footer class="text-bg-dark text-secondary p-3 py-4">
+  <footer class="text-bg-dark-subtle text-secondary p-3 py-4">
     <section class="container-fluid">
       <div class="row">
         <aside class="col-md-4 text-center">
